# patent-retrieval

./: README.md  pyproject.toml
src/patent_retrieval/: 01_retriever.py  02_reranker_async.py  __init__.py  candidates_summary.py  relevance_judge.py  retriever_ui.py
src/patent_retrieval/agents/: __init__.py  patent_judge.py  patent_summarizer.py
src/patent_retrieval/dataset/: README.md  __init__.py  clean_db.py  db_abs_v4.py  db_en_subset.py  parse_clef_ip.py  patent_class.py  validate_qrels.py
src/patent_retrieval/dataset/notebooks/: patent_class.ipynb  sampling.ipynb
src/patent_retrieval/encoder/: __init__.py  dense_encoder.py  encoder.py  sparse_encoder.py
src/patent_retrieval/encoder/misc/: openai_encoder.py  (+3 more)
src/patent_retrieval/notebooks/: graphs.ipynb  hard_topics_.ipynb  ideal_candidates_list.ipynb  reranker_vs_retriever.ipynb  retriever_coverage.ipynb
src/patent_retrieval/post_encoder/: GRAPH_WORKFLOW.md  construct_graphs.py  hybrid_retriever.py  post_retrieval.py  run_hybrid_retriever.py
src/patent_retrieval/prompts/: listwise_reranker_v1.md  listwise_reranker_v2.md  listwise_reranker_v3.md  listwise_reranker_v4.md  listwise_reranker_v5.md  listwise_reranker_v6.md  listwise_reranker_v7.md  listwise_reranker_v7_tournament.md  listwise_reranker_v8.md  patent_judge_v1.md  patent_judge_v2.md  patent_judge_v3.md  patent_judge_v4.md  patent_judge_v5.md  patent_summarizer_v1.md  patent_summarizer_v2.md
src/patent_retrieval/reranker/: README.md  __init__.py  hf_reranker.py  listwise_reranker.py  pointwise_reranker.py  reranker.py
src/patent_retrieval/utils/: __init__.py  evaluate.py  loaders.py  logger.py  progress.py
(+2 files in other folders)
